Modified the headers: Format of Symposium, Topics, Submission

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>AAAI 2026 Symposium</title>
+    <title>AAAI 2026 Workshop</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="hero__overlay">
             <div class="hero__content">
                 <!-- Line 1: static (no typing, no cursor) -->
-                <h1 class="hero__title">AAAI Symposium &ndash; SECURE&#8209;AI4H</h1>
+                <h1 class="hero__title">AAAI Workshop &ndash; SECURE&#8209;AI4H</h1>
 
                 <!-- Lines 2–4: typed sequentially with one caret per line -->
                 <p class="hero__line type line2">
@@ -56,13 +56,13 @@
 
     <h2>Descriptions </h2>
     <p>
-        The SECURE-AI4H Symposium (Safe, Ethical, Certified, Uncertainty-aware, Robust, and Explainable AI for Health) brings together a multidisciplinary community focused on advancing trustworthy AI in healthcare and biomedicine. As AI technologies are increasingly deployed across diagnostics, hospital workflows, robotics, and personalized medicine, their safety, transparency, and real-world certifiability have become critical challenges. This symposium aims to foster cross-sector dialogue among AI researchers, clinicians, ethicists, engineers, cybersecurity experts, and policymakers to develop AI systems that are not only high-performing but also certifiable, interpretable, privacy-preserving, and resilient to adversarial threats.
+        The SECURE-AI4H Workshop (Safe, Ethical, Certified, Uncertainty-aware, Robust, and Explainable AI for Health) brings together a multidisciplinary community focused on advancing trustworthy AI in healthcare and biomedicine. As AI technologies are increasingly deployed across diagnostics, hospital workflows, robotics, and personalized medicine, their safety, transparency, and real-world certifiability have become critical challenges. This symposium aims to foster cross-sector dialogue among AI researchers, clinicians, ethicists, engineers, cybersecurity experts, and policymakers to develop AI systems that are not only high-performing but also certifiable, interpretable, privacy-preserving, and resilient to adversarial threats.
     </p>
 
     <section class="travel-grant-highlight">
     <h3>🎓 Student Travel Grant Available!</h3>
     <p>
-        USA-based students can apply for financial support to attend the 2025 Fall Symposium. Travel, lodging, and registration covered.
+        USA-based students can apply for financial support to attend the 2026 Symposium. Travel, lodging, and registration covered.
     </p>
     <a class="grant-button" href="submissions/submissions.html#travel-grant">Learn More</a>
     </section>
@@ -70,6 +70,8 @@
 
     <h2>Organizers</h2>
     <div class="organizers-grid">
+    
+        <!-- #TODO: Add a feature where if cursor hovers over the image, the image gets bigger -->
 
         <div class="organizer-card">
             <a href="http://www.anarayan.com/">
