Added the right content for the page venue. including the table of hotels, cancelation policy, cutoff dates and visa information

--- a/submissions/submissions.html
+++ b/submissions/submissions.html
@@ -119,7 +119,7 @@
         <li><strong>Paper Notification:</strong> November 5th</li>
         <li><strong>Camera Ready Submission:</strong> November 15th</li>
     </ul>
-    <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/SECURE-AI4H" class="cta-button">Submit via EasyChair</a>
+    <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/SECURE-AI4H" class="cta-button">Submit via Openreview</a>
     <br><br>
     </p>
 
