--- a/venue/venue.html
+++ b/venue/venue.html
@@ -10,7 +10,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>AAAI 2026 Workshop | Venue</title>
 </head>
 
 <body>
@@ -20,14 +20,14 @@
         <div class="hero__overlay">
             <div class="hero__content">
                 <!-- Line 1: static (no typing, no cursor) -->
-                <h1 class="hero__title">AAAI Fall Symposium &ndash; SECURE&#8209;AI4H</h1>
+                <h1 class="hero__title">AAAI Workshop &ndash; SECURE&#8209;AI4H</h1>
 
                 <!-- Lines 2–4: typed sequentially with one caret per line -->
                 <p class="hero__line type line2">
                     Safe, Ethical, Certified, Uncertainty-aware, Robust, and Explainable AI
                 </p>
-                <p class="hero__line type line3">November 6 &ndash; 8, 2025</p>
-                <p class="hero__line type line4">Westin Arlington Gateway, VA</p>
+                <p class="hero__line type line3">January 20 &ndash; 27, 2026</p>
+                <p class="hero__line type line4">Singapore</p>
             </div>
         </div>
     </div>
@@ -54,53 +54,121 @@
 
     <h2>Visa Information</h2>
     <p>
-        Letters of invitation can be requested by accepted FSS-25 authors or registrants with a completed registration and payment. You can access the visa letter form via the link in your registration confirmation email.
+        <p>
+        AAAI recognizes that many authors and attendees will travel internationally to attend AAAI-26 and will need to acquire a travel visa. As a reminder of the 
+        <a href="https://aaai.org/authors/aaai-authors-policy/" target="_blank">AAAI Authors Policy</a>, at least one author is required to present an accepted paper in person and must be registered at the in-person rate.
+        </p>
+
+        <p>
+        AAAI will provide personalized invitation letters ONLY for paid conference registrants of AAAI-26. You may request this letter via the online request link included in your registration confirmation email. It is recommended to print the document to present to the consulate during your visa appointment.
+        </p>
+
+        <p>
+        This Letter of Invitation is solely for the purpose of securing a visa to attend AAAI-26. Attendees’ registration, travel, lodging, and any other expenses incurred to attend this meeting will not be covered or waived by AAAI. Please note that AAAI cannot guarantee or intervene with the obtaining of any visas or other travel documentation required for entry into Singapore.
+        </p>
     </p>
 
     <h2>Hotel Information</h2>
     <p>
-        For your convenience, AAAI has reserved a block of rooms at the <strong>Westin Arlington Gateway</strong>. The hotel is located in the Ballston area of Arlington, a short walk from the Ballston Metro Station, with easy access to Arlington, downtown Washington, DC, Alexandria, or Georgetown. Reagan National Airport is accessible via the Washington Metro.
+        AAAI has reserved a block of rooms at the hotels below at reduced conference rates. Space is limited and attendees are encouraged to make their reservations early.
     </p>
+
+    <h3>Cutoff Dates</h3>
     <p>
-        <strong>Conference Room Rate:</strong> $219.00 per night (King/Double)<br>
-        <em>Rates exclude ~13.25% taxes and applicable hotel fees.</em><br>
-        <div class="hotel-button-container">
-            <a class="hotel-button" href="https://www.marriott.com/en-us/hotels/wasag-the-westin-arlington/overview/" target="_blank">
-                Book Your Hotel
-            </a>
+        Reservation cutoff dates vary by hotel. We strongly encourage attendees to reserve their hotel accommodations early to ensure the best selection and pricing. Room availability and discounted rates cannot be guaranteed after the cutoff dates.
+    </p>
+
+    <h3>Cancellation Policies</h3>
+    <p>
+        Hotel cancellation policies vary by property. Please <strong>terms carefully before booking</strong> to avoid unexpected fees.
+    </p>
+
+    <!-- ========== Conference Rates Available ========== -->
+    <section id="conference-rates" aria-labelledby="conf-rates-title">
+        <h3 id="conf-rates-title">Conference Rates Available</h3>
+
+        <table class="styled-table" aria-describedby="conf-rates-title">
+            <thead>
+            <tr>
+                <th scope="col">Hotel</th>
+                <th scope="col">Nightly Rate</th>
+                <th scope="col">Cutoff</th>
+                <th scope="col">Reservation</th>
+                <th scope="col">Notes</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- Dorsett Changi (Headquarter) -->
+            <tr>
+                <td>
+                <strong>*Dorsett Changi</strong> <span class="tag">Headquarter Hotel</span><br>
+                3 Changi Business Park Central 1, Singapore 486037
+                </td>
+                <td>SGD&nbsp;$280</td>
+                <td>December 27, 2025</td>
+                <td><a class="hotel-button" href="https://www.book-secure.com/index.php?s=results&property=sgsin31679&arrival=2026-01-17&departure=2026-01-25&code=AAAI-26&adults1=1&children1=0&locale=en_GB&currency=SGD&stid=56fowz8gz&_gl=1*1hpsg51*_gcl_aw*R0NMLjE3NDE5MjMyODEuQ2owS0NRandoTXEtQmhDRkFSSXNBR3ZvMEtkc04xaG5rYy1UWmV6VlFMSVFmX3FhRmJpLXRVLVhBX1Mtanl4TnA0U3NJT1g1YkplX1FzTWFBbExWRUFMd193Y0I.*_gcl_au*MzQ3Mzc5NTY5LjE3NDUyODY0Mjc.*_ga*MTM4NjU3MTA3MS4xNzI4MjkxMzMw*_ga_F08278GTSF*czE3NDkxNzQ1NjEkbzQ0JGcxJHQxNzQ5MTk5ODE1JGo0NiRsMCRoNDgwOTgxNzE1*_ga_5NBLX4EBC8*czE3NDkxOTk4MDEkbzg1JGcwJHQxNzQ5MjAwMTQ0JGo2MCRsMCRoNDc0MzE5OTY3" target="_blank" rel="noopener">Book Now</a></td>
+                <td>Complimentary Breakfast &amp; Wi-Fi</td>
+            </tr>
+
+            <!-- Aloft Novena (Downtown) -->
+            <tr>
+                <td>
+                <strong>Aloft Novena (Downtown)</strong><br>
+                16 Ah Hood Rd, Singapore 329982
+                </td>
+                <td>SGD&nbsp;$165</td>
+                <td>December 20, 2025</td>
+                <td><a class="hotel-button" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1739268345682&key=GRP&guestreslink2=true&app=resvlink" target="_blank" rel="noopener">Book Now</a></td>
+                <td>Complimentary Wi-Fi</td>
+            </tr>
+
+            <!-- Grand Mercure Singapore Roxy -->
+            <tr>
+                <td>
+                <strong>*Grand Mercure Singapore Roxy</strong><br>
+                50 E Coast Rd, Roxy Square, Singapore 428769
+                </td>
+                <td>SGD&nbsp;$260</td>
+                <td>December 27, 2025</td>
+                <td><a class="hotel-button" href="https://www.idem.events/r/aaai-2026-6e7edc8b" target="_blank" rel="noopener">Book Now</a></td>
+                <td>Complimentary Breakfast &amp; Wi-Fi</td>
+            </tr>
+
+            <!-- Holiday Inn Express Katong -->
+            <tr>
+                <td>
+                <strong>*Holiday Inn Express Katong</strong><br>
+                88 E Coast Rd, Singapore 423371
+                </td>
+                <td>SGD&nbsp;$195</td>
+                <td>December 3, 2025</td>
+                <td><a class="hotel-button" href="https://www.ihg.com/holidayinnexpress/hotels/gb/en/find-hotels/select-roomrate?fromRedirect=true&qSrt=sBR&qIta=99801505&icdv=99801505&qSlH=sinka&qCiD=14&qCiMy=002026&qCoD=31&qCoMy=002026&qGrpCd=AAA&setPMCookies=true&qSHBrC=EX&qDest=88%20East%20Coast%20Road,%20Singapore,%20SG&showApp=true&adjustMonth=false&srb_u=1&qRmFltr=" target="_blank" rel="noopener">Book Now</a></td>
+                <td>Complimentary Breakfast &amp; Wi-Fi</td>
+            </tr>
+
+            <!-- Village Hotel Changi -->
+            <tr>
+                <td>
+                <strong>*Village Hotel Changi</strong><br>
+                1 Netheravon Rd, Singapore 508502
+                </td>
+                <td>SGD&nbsp;$210</td>
+                <td>December 19, 2025</td>
+                <td><a class="hotel-button" href="https://secure2.fareasthospitality.com/?adult=1&arrive=2026-01-17&chain=24327&child=0&config=SFEPRIVATE&configcode=SFEPRIVATE&currency=SGD&depart=2026-01-28&group=AAAI2026&hotel=6255&level=chain&locale=en-GB&productcurrency=SGD&rooms=1&theme=FEHW&themecode=FEHW" target="_blank" rel="noopener">Book Now</a></td>
+                <td>Complimentary Wi-Fi</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <p>
+            Hotels marked with an asterisk (*) are located along the conference hotel shuttle route to Singapore EXPO. Check back here for shuttle schedule updates.
+        </p>
+
+        <div class="contact-actions">
+            <a class="cta-button outline" href="https://aaai.org/conference/aaai/aaai-26/accommodation/" target="_blank" rel="noopener">View full accommodation details</a>
+            <a class="cta-button" href="https://aaai.org/?post_type=conference&p=92678&preview=true&_thumbnail_id=91339/#gettingto" target="_blank" rel="noopener">Directions to Conference Hotels</a>
         </div>
-    </p>
-    <p>
-        To receive the group rate, mention the <strong>Association for the Advancement of Artificial Intelligence (AAAI)</strong> when reserving. Reservations must be made by <strong>October 18, 2025, 5:00 PM ET</strong>. After this date, reservations are subject to availability and prevailing rates.
-    </p>
-    <ul>
-        <li>Deposit: One night's stay required via credit card</li>
-        <li>Cancellation: Free until 72 hours before arrival</li>
-        <li>Early departure fee: One night's room rate</li>
-    </ul>
-
-    <h3>Hotel Address</h3>
-    <p>
-        <strong>Westin Arlington Gateway</strong><br>
-        801 North Glebe Road,<br>
-        Arlington, Virginia 22203 USA
-    </p>
-
-    <h3>Transportation to the Hotel</h3>
-    <div class="transport-link">
-        For detailed directions and transportation options, please visit the Marriott’s official travel page:
-        <a href="https://www.marriott.com/en-us/hotels/wasag-the-westin-arlington/overview/#maps" target="_blank">
-            Marriott – Getting Here
-        </a>
-    </div>
-
-
-    <p style="font-weight: bold; font-size: 1.1em; margin-top: 2em;">Disclaimer</p>
-    <p style="font-style: italic; color: #666; font-size: 0.9em;">
-    In offering the Westin Arlington Gateway (hereinafter referred to as “Supplier”), and all other service providers for the AAAI Fall Symposium Series, the Association for the Advancement of Artificial Intelligence acts only in the capacity of agent for the Supplier, which is the provider of hotel rooms and transportation. Because the Association for the Advancement of Artificial Intelligence has no control over the personnel, equipment or operations of providers of accommodations or other services included as part of the Symposium program, AAAI assumes no responsibility for and will not be liable for any personal delay, inconveniences or other damage suffered by symposium participants which may arise by reason of (1) any wrongful or negligent acts or omissions on the part of any Supplier or its employees, (2) any defect in or failure of any vehicle, equipment or instrumentality owned, operated or otherwise used by any Supplier, or (3) any wrongful or negligent acts or omissions on the part of any other party not under the control, direct or otherwise, of AAAI.
-    </p>
-
-
+    </section>
 
 </body>
 </html>
