Commentig the section for supporting the travel expenses for students

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
         The SECURE-AI4H Workshop (Safe, Ethical, Certified, Uncertainty-aware, Robust, and Explainable AI for Health) brings together a multidisciplinary community focused on advancing trustworthy AI in healthcare and biomedicine. As AI technologies are increasingly deployed across diagnostics, hospital workflows, robotics, and personalized medicine, their safety, transparency, and real-world certifiability have become critical challenges. This symposium aims to foster cross-sector dialogue among AI researchers, clinicians, ethicists, engineers, cybersecurity experts, and policymakers to develop AI systems that are not only high-performing but also certifiable, interpretable, privacy-preserving, and resilient to adversarial threats.
     </p>
 
+    <!--
     <section class="travel-grant-highlight">
     <h3>🎓 Student Travel Grant Available!</h3>
     <p>
         USA-based students can apply for financial support to attend the 2026 Symposium. Travel, lodging, and registration covered.
     </p>
     <a class="grant-button" href="submissions/submissions.html#travel-grant">Learn More</a>
-    </section>
+    </section>-->
 
 
     <h2>Organizers</h2>
