Organized the assets folder, modified the organizers section at home page

--- a/program/program.html
+++ b/program/program.html
@@ -4,7 +4,7 @@
 <head>
     <base href="..">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="assets/new-icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/icon/new-icon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
@@ -16,7 +16,7 @@
 <body>
 
     <div class="hero">
-    <img class="hero__img" src="assets/editted-banner.jfif" alt="SECURE-AI4H Banner">
+    <img class="hero__img" src="assets/banner/editted-banner.jfif" alt="SECURE-AI4H Banner">
         <div class="hero__overlay">
             <div class="hero__content">
                 <!-- Line 1: static (no typing, no cursor) -->
