--- a/registeration/register.html
+++ b/registeration/register.html
@@ -3,7 +3,7 @@
 <head>
   <base href="..">
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" type="image/png" href="assets/new-icon.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/icon/new-icon.png"/>
   <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
   <meta name="description" content="AAAI 2026 Workshop Registration" />
   <meta name="resource-type" content="document" />
@@ -16,7 +16,7 @@
 
   <!-- Hero -->
   <div class="hero">
-    <img class="hero__img" src="assets/editted-banner.jfif" alt="SECURE-AI4H Banner">
+    <img class="hero__img" src="assets/banner/editted-banner.jfif" alt="SECURE-AI4H Banner">
     <div class="hero__overlay">
       <div class="hero__content">
         <h1 class="hero__title">AAAI Workshop – SECURE-AI4H</h1>
