adding the empty page and button for speakers

--- a/registeration/register.html
+++ b/registeration/register.html
@@ -32,6 +32,9 @@
     <tr>
       <td class="navigation"><a title="Conference Home Page" href="index.html">Home</a></td>
       <td class="navigation"><a title="Submit Papers" href="submissions/submissions.html">Call for Papers</a></td>
+      <td class="navigation">
+                <a title="speakers" title="More Details" href="speakers/speakers.html">Speakers</a>
+            </td>
       <td class="navigation"><a title="More Details" href="program/program.html">Program</a></td>
       <td class="navigation"><a title="Venue" href="venue/venue.html">Venue</a></td>
       <td class="navigation"><a class="current" title="Register" href="registeration/register.html">Registration</a></td>
