--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a title="Submit Papers" href="submissions/submissions.html">Call for Papers</a>
             </td>
             <td class="navigation">
+                <a title="speakers" title="More Details" href="speakers/speakers.html">Speakers</a>
+            </td>
+            <td class="navigation">
                 <a title="More Details" href="program/program.html">Program</a>
             </td>
             <td class="navigation">
