--- a/submissions/submissions.html
+++ b/submissions/submissions.html
@@ -41,6 +41,9 @@
                 <a class="current" title="Submit Papers" href="submissions/submissions.html">Call for Papers</a>
             </td>
             <td class="navigation">
+                <a title="current" title="More Details" href="speakers/speakers.html">Speakers</a>
+            </td>
+            <td class="navigation">
                 <a title="More Details" href="program/program.html">Program</a>
             </td>
             <td class="navigation">
