--- a/speakers/speakers.html
+++ b/speakers/speakers.html
@@ -20,14 +20,14 @@
         <div class="hero__overlay">
             <div class="hero__content">
                 <!-- Line 1: static (no typing, no cursor) -->
-                <h1 class="hero__title">AAAI Fall Symposium &ndash; SECURE&#8209;AI4H</h1>
+                <h1 class="hero__title">AAAI Workshop &ndash; SECURE&#8209;AI4H</h1>
 
                 <!-- Lines 2–4: typed sequentially with one caret per line -->
                 <p class="hero__line type line2">
                     Safe, Ethical, Certified, Uncertainty-aware, Robust, and Explainable AI
                 </p>
-                <p class="hero__line type line3">November 6 &ndash; 8, 2025</p>
-                <p class="hero__line type line4">Westin Arlington Gateway, VA</p>
+                <p class="hero__line type line3">January 20 &ndash; 27, 2026</p>
+                <p class="hero__line type line4">Singapore</p>
             </div>
         </div>
     </div>
